# dynamic-cast-test

./: CMakeLists.txt  README.md  main.cpp
headers/: baseVoiceGroup.h  definitions.h  matchVoiceGroup.h  voiceGroup.h
source/: CMakeLists.txt  matchVoiceGroup.cpp  voiceGroup.cpp
